--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,7 +24,7 @@
         .funky-font { font-family: 'Fredoka One', cursive; }
         .handwritten { font-family: 'Pacifico', cursive; }
 
-        /* Scrolling Banner Styles */
+        /* Continuous Scrolling Banner Styles */
         .love-banner {
             background: var(--accent-pink);
             color: white;
@@ -36,18 +35,25 @@
             padding: 8px 0;
             font-size: 0.8rem;
             z-index: 80;
+            display: flex;
         }
         .header-banner { top: 0; }
         .footer-banner { bottom: 0; }
 
-        .banner-scroll {
-            display: inline-block;
-            animation: scroll 15s linear infinite;
+        .banner-track {
+            display: flex;
+            width: fit-content;
+            animation: continuous-scroll 20s linear infinite;
         }
 
-        @keyframes scroll {
-            from { transform: translateX(100%); }
-            to { transform: translateX(-100%); }
+        .banner-content {
+            display: flex;
+            padding-right: 20px;
+        }
+
+        @keyframes continuous-scroll {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-50%); }
         }
 
         /* Collectible Bears - ABSOLUTE FRONT */
@@ -62,7 +68,6 @@
             animation: float-around var(--d) ease-in-out infinite, teddy-pulse 2s infinite;
             transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity 0.3s ease;
             filter: drop-shadow(0 4px 6px rgba(0,0,0,0.15));
-            /* Huge invisible tap area for fingers */
             padding: 25px; 
             display: flex;
             align-items: center;
@@ -173,17 +178,27 @@
 </head>
 <body class="flex flex-col items-center justify-center">
 
-    <!-- Top Banner -->
+    <!-- Top Continuous Banner -->
     <div class="love-banner header-banner">
-        <div class="banner-scroll funky-font">
-            I LOVE YOU FOREVER PPITA ❤️ I LOVE YOU FOREVER PPITA ❤️ I LOVE YOU FOREVER PPITA ❤️ I LOVE YOU FOREVER PPITA ❤️
+        <div class="banner-track funky-font">
+            <div class="banner-content">
+                I LOVE YOU FOREVER PPITA ❤️ I LOVE YOU FOREVER PPITA ❤️ I LOVE YOU FOREVER PPITA ❤️ I LOVE YOU FOREVER PPITA ❤️
+            </div>
+            <div class="banner-content">
+                I LOVE YOU FOREVER PPITA ❤️ I LOVE YOU FOREVER PPITA ❤️ I LOVE YOU FOREVER PPITA ❤️ I LOVE YOU FOREVER PPITA ❤️
+            </div>
         </div>
     </div>
 
-    <!-- Bottom Banner -->
+    <!-- Bottom Continuous Banner -->
     <div class="love-banner footer-banner">
-        <div class="banner-scroll funky-font">
-            PPITA LOVES ME TOOO ❤️ PPITA LOVES ME TOOO ❤️ PPITA LOVES ME TOOO ❤️ PPITA LOVES ME TOOO ❤️
+        <div class="banner-track funky-font">
+            <div class="banner-content">
+                PPITA LOVES ME TOOO ❤️ PPITA LOVES ME TOOO ❤️ PPITA LOVES ME TOOO ❤️ PPITA LOVES ME TOOO ❤️
+            </div>
+            <div class="banner-content">
+                PPITA LOVES ME TOOO ❤️ PPITA LOVES ME TOOO ❤️ PPITA LOVES ME TOOO ❤️ PPITA LOVES ME TOOO ❤️
+            </div>
         </div>
     </div>
 
@@ -194,7 +209,6 @@
 
     <div id="bg-decoration" class="fixed inset-0 overflow-hidden pointer-events-none"></div>
 
-    <!-- Collectibles Container - EXPLICIT TOP LAYER -->
     <div id="collectibles-layer" class="fixed inset-0 overflow-hidden" style="z-index: 99998; pointer-events: none;"></div>
 
     <main class="w-full h-full flex flex-col items-center justify-around py-16 px-6 relative z-10">
@@ -288,7 +302,6 @@
         const collectibleContainer = document.getElementById('collectibles-layer');
 
         function generateBears() {
-            // Clear existing if any
             collectibleContainer.innerHTML = '';
             bearsFound = 0;
             bearCountEl.innerText = '0';
@@ -404,10 +417,8 @@
         }, {passive: false});
         heart.addEventListener('mousedown', handleHug);
 
-        // Reset bears functionality
         document.getElementById('close-reward-btn').addEventListener('click', () => {
             document.getElementById('kiss-reward-screen').style.display = 'none';
-            // Regenerate/Reset bears
             generateBears();
         });
 
@@ -415,4 +426,3 @@
     </script>
 </body>
 </html>
-
