--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
 
     <script>
         const compliments = [
-            "Your soul is so beautiful! ✨", "Lucky person in the world! ❤️", "My favorite person, PPITA! 🧸",
-            "Better with you... 🌸", "Heart belongs to you! 💖", "Smarter than you know! 🧠",
-            "Love your laugh! 😂", "Make me better! 💪", "You are my home. 🏠", "I LOVE YOU FOREVER! ♾️"
+            "Your soul is so beautiful! ✨", "Luckiest person in the world! ❤️", "My favorite person, PPITA! 🧸",
+            "Always better with you... 🌸", "My heart belongs to you! 💖", "You're marter than you know! 🧠",
+            "Love your smile! 😂", "You make me better! 💪", "You are my home. 🏠", "I LOVE YOU FOREVER! ♾️"
         ];
 
         let hugs = 0;
